updated cluster
