# tools/openapi/swagger.json
@@ -849,6 +849,12 @@
                         "name": "x-mongo-privatekey",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter",
+                        "name": "Filter",
+                        "in": "query"
                     }
                 ],
                 "responses": {
